--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Layout for private area of populationzero",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack-dev-server --host=0.0.0.0",
     "build-webpack": "webpack -p --progress --mode production --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
