--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "bootstrap-slider": "^10.2.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   },
